# Auto-Marker-Docking

./: CMakeLists.txt  readme.md
auto_marker_docking_interface/: CMakeLists.txt  package.xml
auto_marker_docking_interface/action/: MarkerDocking.action  marker_docking.action
auto_marker_docking_system/: CMakeLists.txt  package.xml
auto_marker_docking_system/include/auto_marker_docking/: PD_controller.hpp
auto_marker_docking_system/launch/: auto_marker_docking.launch.py
auto_marker_docking_system/param/: docking_param.yaml
auto_marker_docking_system/src/: auto_marker_docking_node.cpp
include/auto_marker_docking/: PD_controller.hpp  aruco_extend_kalman_filter.hpp  aruco_kalman_filter.hpp  aruco_marker_detector.hpp  utils.hpp
src/: PD_controller.cpp  aruco_extend_kalman_filter.cpp  aruco_kalman_filter.cpp  aruco_marker_detector.cpp  auto_marker_docking_node.cpp
